# fsa

./: .coveragerc  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: render.py  render_minimization_example.py
fsa/: __init__.py  fsa.py
tests/: test_fsa.py  test_minimization.py  tests.py
