[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fsa"
version = "0.1.2"
description = "Finite-state automata"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Tim Vieira"},
]

urls.Homepage = "https://github.com/timvieira/fsa"
urls.Repository = "https://github.com/timvieira/fsa"

dependencies = [
    "numpy",
    "graphviz",
    "arsenal @ git+https://github.com/timvieira/arsenal",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
]
regex = [
    "semirings @ git+https://github.com/timvieira/semirings",
]

[tool.setuptools]
packages = ["fsa"]

[tool.ruff.lint]
ignore = ["E701", "E702"]
